# OpenWSFZ

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DEFECT-cross-platform-decoder.md  DEFECT-cycle-discard-on-restart.md  DEFECT-native-stack-overflow-pcm-residual.md  DEFECT-ws-status-decoding-enabled.md  DEV-ALIGNMENT-2026-05-31.md  DEV-BRIEFING-iterative-subtraction.md  DEV-BRIEFING-p11-decoder-port-r1.md  DEV-BRIEFING-p11-decoder-port.md  DEV-BRIEFING-p17-settings-ux.md  DEV-BRIEFING-post-p13-audit.md  DEV-BRIEFING-settings-dirty-state.md  DEV-REMEDIATION-p11-decoder-port.md  Directory.Build.props  Directory.Packages.props  IMPLEMENTATION_PLAN.md  LICENSE  OpenWSFZ.slnx  QA-ALIGNMENT-2026-05-31.md  QA-REVIEW-p10-decoder-ground-truth.md  QA-REVIEW-p11-decoder-port-r2.md  QA-REVIEW-p11-decoder-port.md  QA-REVIEW-p7-p6.md  README.md  RECOVERY_PLAN.md  REQUIREMENTS.md  REQUIREMENTS_DRAFT.md  TECHNICAL_SPEC.md  TESTING_STRATEGY.md  config.example.json  frequencies.json  resume.txt  traceability-debt.md
.claude/: mcp.json
.serena/: project.yml
cmake/: CompileFlags.cmake  Dependencies.cmake
dev-tasks/: 2026-06-17-llr-diagnostic-shim-20260019.md  2026-06-18-d001-h6-ap-decode-and-probe-redesign.md  2026-06-18-d001-h6-ap-wire-csharp.md  2026-06-20-d001-osd-test-gaps.md  2026-06-20-d009-fp-callsign-filter.md  2026-06-20-d009-fp-filter-arch-design.md  2026-06-20-d009-fp-filter-arch-review.md  2026-06-20-d009-fp-filter-r2.md  2026-06-20-d009-fp-filter-r3.md  2026-06-20-d009-fp-filter-r4.md  2026-06-20-d009-fp-filter-r5.md  2026-06-20-d009-nhard-diag.md  2026-06-20-d009-r6-decision-fork.md  2026-06-20-d009-r6-dev-diagnostic.md  2026-06-20-d009-s5-widened-spec.md  2026-06-20-osd-review-r1.md  2026-06-21-d009-ablation-decision-arch.md  2026-06-21-d009-ablation-dev.md  2026-06-21-d009-b2-escalation-captain.md  2026-06-21-d009-captain-final-escalation.md  2026-06-21-d009-k10-confirm-dev.md  2026-06-21-d009-k10-gate-fail-arch.md  2026-06-21-d009-pass1-sweep-dev.md  2026-06-22-ci-native-binary-commit-back.md  2026-06-22-fix-answer-cq-phase-detection.md  2026-06-22-fix-ci-tls-ap-contamination.md  2026-06-22-fix-d009-fp-callsign-filter.md  2026-06-22-fix-tx-panel-disarm.md  2026-06-22-gui-tx-panel-cq-click-highlights.md  2026-06-23-fix-tx-cycle-phase-timing.md  2026-06-23-fix-tx-double-click-race.md  2026-06-23-lan-browser-auth-test-isolation.md  2026-06-23-lan-browser-auth.md  2026-06-24-build-md-shim-exports.md  2026-06-24-d-lan-004-static-asset-auth.md  (+92 more)
docs/: ARCHITECTURE.md  (+4 more)
(+1628 files in other folders)
